// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxSet /> should render a checkbox button set 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="key-option-1"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="key-option-1"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="key-option-1"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option-2"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="key-option-2"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="key-option-2"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option-3"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="key-option-3"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="key-option-3"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option-4"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="key-option-4"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox checkbox-button"
        htmlFor="key-option-4"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<CheckboxSet /> should render a checkbox set 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="option-option-1"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="option-option-1"
        name="option"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="option-option-1"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="option-option-2"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="option-option-2"
        name="option"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="option-option-2"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="option-option-3"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="option-option-3"
        name="option"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="option-option-3"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="option-option-4"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="option-option-4"
        name="option"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="option-option-4"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<CheckboxSet /> should render a checkbox set with horizontal buttons 1`] = `
<styled.div
  orientation="horizontal"
>
  <styled.div
    key="key-option-1"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="key-option-1"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="key-option-1"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option-2"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="key-option-2"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="key-option-2"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option-3"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="key-option-3"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="key-option-3"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option-4"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="key-option-4"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="key-option-4"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<CheckboxSet /> should render a checkbox set with tight spacing 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="key-option-1"
    margins={Object {}}
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="key-option-1"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="key-option-1"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option-2"
    margins={Object {}}
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        disabled={true}
        id="key-option-2"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="key-option-2"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option-3"
    margins={Object {}}
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="key-option-3"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="key-option-3"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="key-option-4"
    margins={Object {}}
  >
    <div
      className="checkbox-input checkboxInput"
    >
      <styled.input
        className="input "
        data-component-type="checkbox_input"
        id="key-option-4"
        name="key"
        onChange={[Function]}
        type="checkbox"
        value="false"
      />
      <label
        className="checkbox"
        htmlFor="key-option-4"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;
